mockup border on mobile fixed

--- a/src/app/shop/[slug]/constructor/page.module.css
+++ b/src/app/shop/[slug]/constructor/page.module.css
@@ -30,6 +30,10 @@
     justify-content: center;
     align-items: center;
     position: relative;
+    border: 1px solid black;
+    border-radius: 20px;
+    box-sizing: border-box;
+    overflow: hidden;
 }
 
 .stage_container {
@@ -381,7 +385,12 @@
 
 @media (max-width: 650px) {
     .screen {
-        padding: 50px 0;
+        padding: 10px 0 50px 0;
         border: none;
+        margin-top: 0;
+    }
+    .mockup_container {
+        border: none;
+        border-radius: 0;
     }
 }
